deployment.yml
## This is example deployment.yml generated by command
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rails-gke-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: rails-gke
    spec:
      containers:
        - name: rails-gke
          image: asia.gcr.io/el-soul/rails-gke:0.0.1 #You need to update this version. e.g 0.0.2
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
          env: # Set env file from here. Do not forget to edit secret.yml when you add here.
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  name: rails-gke-secret
                  key: db_host
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: rails-gke-secret
                  key: db_user
            - name: DB_PW
              valueFrom:
                secretKeyRef:
                  name: rails-gke-secret
                  key: db_pw
