service.yml
## This is example service.yml generated by command
kind: Service
apiVersion: v1
metadata:
  name: rails-gke-service
spec:
  selector:
    app: rails-gke
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
