ingress.yml
## This is example ingress.yml generated by command
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-rails-gke
  annotations:
    kubernetes.io/ingress.global-static-ip-name: https-rails-gke
    networking.gke.io/managed-certificates: rails-gke-secret
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          serviceName: rails-gke-service
          servicePort: 80
